--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,30 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Geldkram & mehr
+email: hilbert.ralf[at]web.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "blog" # the subpath of your site, e.g. /blog
+  Hier geht's um Geld. Kram den die wenigsten mögen,
+  mit dem sich aber alle beschäftigen sollten!
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: hilbert-ralf
+github_username:  hilbert-ralf
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+
+feed:
+  categories:
+    - "geldkram"
+    - "tech"
+
+# preview of post on homepage
+show_excerpts: false
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
