--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,13 @@
 # in the templates via {{ site.myvariable }}.
 title: Geldkram & mehr
 email: hilbert.ralf[at]web.de
+author: Ralf Hilbert
+lang: de_DE
 description: >- # this means to ignore newlines until "baseurl:"
   Hier geht's um Geld. Kram den die wenigsten mögen,
   mit dem sich aber alle beschäftigen sollten!
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hilbert-ralf.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hilbert_ralf
 github_username:  hilbert-ralf
 facebook_username: ralf.hilbert.3
@@ -27,17 +29,25 @@ facebook_username: ralf.hilbert.3
 # Build settings
 markdown: kramdown
 theme: minima
+
+# preview of post on homepage
+show_excerpts: true
+
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-archives
+  - jekyll-sitemap
 
 feed:
   categories:
     - "geldkram"
     - "tech"
 
-# preview of post on homepage
-show_excerpts: false
+jekyll-archives:
+  enabled: []
+
+
 
 
 # Exclude from processing.
