--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   mit dem sich aber alle beschäftigen sollten!
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://hilbert-ralf.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: hilbert_ralf
+twitter_username: ralf_hilbert
 github_username:  hilbert-ralf
 facebook_username: ralf.hilbert.3
 
